gemini model updates

--- a/dataset_RAG/gemini_rag_dataset.ipynb
+++ b/dataset_RAG/gemini_rag_dataset.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: ace_tools in c:\\users\\hayde\\onedrive - logical aspect\\education\\unisa\\inft3039 - capstone 1\\.venv\\lib\\site-packages (0.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %pip install --quiet --upgrade langchain-text-splitters langchain-community langgraph\n",
     "\n",
@@ -23,23 +15,15 @@
     "# !pip install beautifulsoup4\n",
     "# !pip install pyarrow fastparquet\n",
     "# !pip install ace_tools\n",
-    "# !pip install langsmith"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This notebook produces an inmemory vector database using the Open AI api and langchain openai embeddings.\n",
-    "\n",
-    "When run for 9500 entries, the Open AI usage calcultor provided a cost of $0.90 a run. \n",
-    "\n",
-    "The "
+    "# !pip install langsmith\n",
+    "# %pip install --upgrade --quiet  google-ai-generativelanguage==0.6.1\n",
+    "# %pip install --upgrade --quiet  langchain-google-genai \n",
+    "# !pip install openpyxl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,9 +33,10 @@
     "from langchain_core.documents import Document\n",
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
     "from langchain_core.vectorstores import InMemoryVectorStore\n",
-    "from langchain.embeddings.openai import OpenAIEmbeddings\n",
+    "\n",
+    "from langchain_google_genai import GoogleGenerativeAIEmbeddings\n",
     "from langchain import hub\n",
-    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
     "from langgraph.graph import START, StateGraph\n",
     "from typing_extensions import List, TypedDict\n",
     "import langsmith\n",
@@ -60,24 +45,31 @@
     "import json\n",
     "from pydantic.v1 import BaseModel\n",
     "from langchain.chat_models import init_chat_model\n",
-    "from sklearn.metrics import r2_score\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from math import sqrt"
+    "from sklearn.metrics import r2_score\n",
+    "from math import sqrt\n",
+    "import getpass\n",
+    "import os\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "if not os.environ.get(\"OPENAI_API_KEY\"):\n",
-    "  os.environ[\"OPENAI_API_KEY\"] = getpass.getpass(\"Enter API key for OpenAI: \")\n",
     "\n",
-    "from langchain_openai import OpenAIEmbeddings\n",
     "\n",
-    "embeddings = OpenAIEmbeddings(model=\"text-embedding-3-large\")"
+    "if not os.environ.get(\"GOOGLE_API_KEY\"):\n",
+    "  os.environ[\"GOOGLE_API_KEY\"] = getpass.getpass(\"Enter API key for Google Gemini: \")\n",
+    "\n",
+    "\n",
+    "# llm = ChatGoogleGenerativeAI(model=\"gemini-2.0-flash\")\n",
+    "\n",
+    "# embeddings = GoogleGenerativeAIEmbeddings(model=\"models/text-embedding-004\")\n",
+    "\n"
    ]
   },
   {
@@ -85,16 +77,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "os.environ[\"LANGSMITH_TRACING\"] = \"true\"\n",
-    "os.environ[\"LANGSMITH_API_KEY\"] = getpass.getpass(\"LANGSMITH_API_KEY\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +94,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,19 +151,20 @@
     "    )\n",
     "    processed_rows += 1\n",
     "\n",
+    "\n",
     "# Initialize text splitter\n",
     "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
     "all_splits = text_splitter.split_documents(docs)\n",
     "\n",
     "# Initialize embeddings\n",
-    "embeddings = OpenAIEmbeddings()\n",
+    "embeddings = GoogleGenerativeAIEmbeddings(model=\"models/text-embedding-004\")\n",
     "\n",
     "# Initialize In-Memory Vector Store\n",
     "vector_store = InMemoryVectorStore(embeddings)\n",
     "vector_store.add_documents(all_splits)\n",
     "\n",
     "# Load LLM and prompt\n",
-    "llm = ChatOpenAI(model_name=\"gpt-4\")\n",
+    "llm = ChatGoogleGenerativeAI(model=\"gemini-2.0-flash\")\n",
     "prompt = hub.pull(\"rlm/rag-prompt\")\n",
     "\n",
     "# Define State for LLM workflow\n",
@@ -213,12 +201,13 @@
     "graph_builder = StateGraph(State).add_sequence([retrieve, grade])\n",
     "\n",
     "graph_builder.add_edge(START, \"retrieve\")\n",
-    "graph = graph_builder.compile()\n"
+    "graph = graph_builder.compile()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +218,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,16 +246,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>question</th>\n",
+       "      <th>essay</th>\n",
+       "      <th>band</th>\n",
+       "      <th>cleaned_evaluation</th>\n",
+       "      <th>Task Achievement</th>\n",
+       "      <th>Coherence</th>\n",
+       "      <th>Lexical Resource</th>\n",
+       "      <th>Grammar</th>\n",
+       "      <th>Overall Band Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Interview form the basic selection criteria fo...</td>\n",
+       "      <td>To agree or disagree with the statement that i...</td>\n",
+       "      <td>6.5\\n\\n\\n\\n\\n\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r</td>\n",
+       "      <td>Task Achievement (6.5)\\n- The essay effectivel...</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>6.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The increase in the production of consumer con...</td>\n",
+       "      <td>It is true that the rise in consumer productio...</td>\n",
+       "      <td>8\\n\\n\\n\\n\\n\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r</td>\n",
+       "      <td>Task Achievement:\\n- The essay adequately addr...</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The increase in the production of consumer goo...</td>\n",
+       "      <td>It is widely argued that the growth of the num...</td>\n",
+       "      <td>8.5\\n\\n\\n\\n\\n\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r</td>\n",
+       "      <td>Task Achievement:\\n\\nThe essay effectively add...</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>8.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>The increase in the production of consumer goo...</td>\n",
+       "      <td>The production of new items and objects have b...</td>\n",
+       "      <td>&lt;4\\n\\n\\n\\n\\n\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r</td>\n",
+       "      <td>Task Achievement:\\n- The candidate has partial...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The increase in the production of consumer goo...</td>\n",
+       "      <td>In recent years, an increase in the manufactur...</td>\n",
+       "      <td>4\\n\\n\\n\\n\\n\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r</td>\n",
+       "      <td>Task Achievement: 3.5\\n- The essay effectively...</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            question  \\\n",
+       "0  Interview form the basic selection criteria fo...   \n",
+       "1  The increase in the production of consumer con...   \n",
+       "2  The increase in the production of consumer goo...   \n",
+       "3  The increase in the production of consumer goo...   \n",
+       "4  The increase in the production of consumer goo...   \n",
+       "\n",
+       "                                               essay  \\\n",
+       "0  To agree or disagree with the statement that i...   \n",
+       "1  It is true that the rise in consumer productio...   \n",
+       "2  It is widely argued that the growth of the num...   \n",
+       "3  The production of new items and objects have b...   \n",
+       "4  In recent years, an increase in the manufactur...   \n",
+       "\n",
+       "                                      band  \\\n",
+       "0  6.5\\n\\n\\n\\n\\n\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r   \n",
+       "1    8\\n\\n\\n\\n\\n\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r   \n",
+       "2  8.5\\n\\n\\n\\n\\n\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r   \n",
+       "3   <4\\n\\n\\n\\n\\n\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r   \n",
+       "4    4\\n\\n\\n\\n\\n\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r   \n",
+       "\n",
+       "                                  cleaned_evaluation  Task Achievement  \\\n",
+       "0  Task Achievement (6.5)\\n- The essay effectivel...               6.5   \n",
+       "1  Task Achievement:\\n- The essay adequately addr...               8.5   \n",
+       "2  Task Achievement:\\n\\nThe essay effectively add...               8.5   \n",
+       "3  Task Achievement:\\n- The candidate has partial...               3.0   \n",
+       "4  Task Achievement: 3.5\\n- The essay effectively...               3.5   \n",
+       "\n",
+       "   Coherence  Lexical Resource  Grammar  Overall Band Score  \n",
+       "0        7.0               6.5      6.5                 6.5  \n",
+       "1        8.0               7.5      7.0                 8.0  \n",
+       "2        8.0               7.5      7.0                 8.5  \n",
+       "3        2.0               2.5      2.0                 2.5  \n",
+       "4        4.0               3.5      3.5                 4.0  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_test.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -311,38 +439,41 @@
     "result = graph.invoke({\"question\": new_question, \"essay\": new_essay})\n",
     "# print(result)\n",
     "print(\"---------\")\n",
-    "# print(\"Predicted Band Score:\", result[\"Predicted score\"])"
+    "# print(\"Predicted Band Score:\", result[\"Predicted score\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8.0"
+       "6.5"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# result[\"context\"][1].page_content.split(\"\\n\")\n",
-    "# convert to json\n",
     "\n",
-    "result_json = json.loads(result[\"graded_response\"])\n",
-    "result_json[\"overall score\"]\n",
+    "# result_json = json.loads(result[\"graded_response\"])\n",
+    "# result_json[\"overall score\"]\n",
     "\n",
-    "\n"
+    "# the json object returned from the grading function is stored between  ```json{ and }``` \n",
+    "# so we need to remove the first 5 characters and the last character to get the json object\n",
+    "result_json = json.loads(result[\"graded_response\"][8:-3])\n",
+    "\n",
+    "\n",
+    "result_json[\"overall score\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -365,18 +496,40 @@
       "---------\n",
       "---------\n",
       "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
+      "---------\n",
       "---------\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for /: 'float' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[54], line 19\u001b[0m\n\u001b[0;32m     16\u001b[0m result_json \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mloads(result[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgraded_response\u001b[39m\u001b[38;5;124m\"\u001b[39m]) \n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# show accuracy of the model by comparing the predicted score to the actual score\u001b[39;00m\n\u001b[1;32m---> 19\u001b[0m new_row \u001b[38;5;241m=\u001b[39m (row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mquestion\u001b[39m\u001b[38;5;124m'\u001b[39m],row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124messay\u001b[39m\u001b[38;5;124m'\u001b[39m],\u001b[38;5;28mfloat\u001b[39m(row[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOverall Band Score\u001b[39m\u001b[38;5;124m\"\u001b[39m]),result_json[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moverall score\u001b[39m\u001b[38;5;124m\"\u001b[39m],\u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mOverall Band Score\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43mresult_json\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43moverall score\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[0;32m     20\u001b[0m rag_results\u001b[38;5;241m.\u001b[39mappend(new_row)  \n\u001b[0;32m     21\u001b[0m processed_rows \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'float' and 'str'"
      ]
     }
    ],
@@ -396,55 +549,53 @@
     "    # print(\"Predicted Band Score:\", result[\"overall score\"])\n",
     "    print(\"---------\")\n",
     "    # add row as list of dictionaries   \n",
-    "    result_json = json.loads(result[\"graded_response\"]) \n",
-    "    # show accuracy of the model by comparing the predicted score to the actual score\n",
-    "    \n",
-    "    new_row = (row['question'],row['essay'],(row[\"Overall Band Score\"]),result_json[\"overall score\"],float(row[\"Overall Band Score\"])/result_json[\"overall score\"])\n",
+    "    result_json = json.loads(result[\"graded_response\"][8:-3])\n",
+    "    new_row = (row['question'],row['essay'],float(row[\"Overall Band Score\"]),result_json[\"overall score\"],float(row[\"Overall Band Score\"])/float(result_json[\"overall score\"]))\n",
     "    rag_results.append(new_row)  \n",
-    "    processed_rows += 1\n",
-    "\n",
-    "\n"
+    "    processed_rows += 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(16, 5)"
+       "(50, 5)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "# convert list of dictionaries to dataframe\n",
     "rag_results = pd.DataFrame(rag_results, columns = ['question','essay','Overall Band Score','Predicted Band Score','variation'])\n",
+    "\n",
     "\n",
     "rag_results.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "openai_performance_measures\n",
+      "gemini_performance_measures\n",
       "mse\n",
-      "2.3351927115336757\n",
+      "1.1423659658795862\n",
       "rmse\n",
-      "2.3351927115336757\n",
+      "1.1423659658795862\n",
       "mae\n",
-      "5.453125\n"
+      "1.305\n"
      ]
     }
    ],
@@ -458,13 +609,12 @@
     "y_pred = rag_results['Predicted Band Score']\n",
     "y_true = rag_results['Overall Band Score']\n",
     "\n",
-    "print(\"openai_performance_measures\")\n",
+    "print(\"gemini_performance_measures\")\n",
     "\n",
     "\n",
     "print(\"mse\")\n",
     "mse = sqrt(mean_squared_error(rag_results['Overall Band Score'], rag_results['Predicted Band Score']))\n",
     "print(mse)\n",
-    "print(\"\")\n",
     "\n",
     "print(\"rmse\")\n",
     "rmse = sqrt(mean_squared_error(rag_results['Overall Band Score'], rag_results['Predicted Band Score']))\n",
@@ -475,7 +625,7 @@
     "print(mae)\n",
     "\n",
     "# save to excel file\n",
-    "rag_results.to_excel(\"openai_rag_results.xlsx\")\n"
+    "rag_results.to_excel(\"gemini_rag_results.xlsx\")\n"
    ]
   }
  ],
