updated IELTS training prompts and google verison of rag dataset notebook

--- a/dataset_RAG/gemini_rag_dataset.ipynb
+++ b/dataset_RAG/gemini_rag_dataset.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,6 +203,43 @@
     "    messages = [\n",
     "        {\"role\": \"system\", \"content\": \n",
     "    \"\"\"You are an IELTS examiner. Score the given essay based on the 0-9 IELTS band scale. \n",
+    "    \n",
+    "    ### IELTS Writing Band Descriptors (Task 2) - Official Criteria\n",
+    "\n",
+    "    #### **Task Achievement**\n",
+    "    - **Band 9**: Fully addresses all parts of the task, presents a well-developed position with fully extended and well-supported ideas.\n",
+    "    - **Band 8**: Covers all task requirements sufficiently, presents a clear and well-developed position.\n",
+    "    - **Band 7**: Addresses all parts of the task, though some ideas may lack full support or development.\n",
+    "    - **Band 6**: Addresses the task, but some points may be underdeveloped or missing.\n",
+    "    - **Band 5**: Generally addresses the task but lacks sufficient development.\n",
+    "    - **Band 4 or below**: Does not fully address the task or is off-topic.\n",
+    "\n",
+    "    #### **Coherence & Cohesion**\n",
+    "    - **Band 9**: Logical sequencing, seamless flow, and skillful paragraphing.\n",
+    "    - **Band 8**: Well-organized response with logical progression and good paragraphing.\n",
+    "    - **Band 7**: Clear progression, appropriate paragraphing but occasional lapses.\n",
+    "    - **Band 6**: Ideas are generally arranged logically but may have some cohesion issues.\n",
+    "    - **Band 5**: Lacks coherence; linking devices may be inaccurate or overused.\n",
+    "    - **Band 4 or below**: Disjointed ideas with weak organization.\n",
+    "\n",
+    "    #### **Lexical Resource**\n",
+    "    - **Band 9**: Wide, precise, and sophisticated vocabulary, with natural collocations.\n",
+    "    - **Band 8**: A wide range of vocabulary with minor occasional inaccuracies.\n",
+    "    - **Band 7**: Uses a good range of vocabulary but with occasional repetition or inappropriate word choice.\n",
+    "    - **Band 6**: Vocabulary is adequate but lacks flexibility.\n",
+    "    - **Band 5**: Limited vocabulary, frequent repetition, and basic expressions.\n",
+    "    - **Band 4 or below**: Very basic vocabulary with frequent errors that impede communication.\n",
+    "\n",
+    "    #### **Grammatical Range & Accuracy**\n",
+    "    - **Band 9**: A wide range of structures, complex sentences are used naturally.\n",
+    "    - **Band 8**: A good mix of complex and simple structures, minor errors may occur.\n",
+    "    - **Band 7**: Uses a variety of sentence forms, but some errors remain.\n",
+    "    - **Band 6**: Uses some complex structures but errors may persist.\n",
+    "    - **Band 5**: Limited range of structures, frequent grammar mistakes.\n",
+    "    - **Band 4 or below**: Frequent errors affecting communication.\n",
+    "\n",
+    "    Use this rubric to score an IELTS writing response based on the essay below. Provide feedback for each criterion and an overall score.\n",
+    "    \n",
     "    The output must be a **valid JSON object** with the following exact keys:\n",
     "    - \"question\" (string): The original essay question.\n",
     "    - \"essay\" (string): The given essay.\n",
@@ -234,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -921,6 +958,17 @@
     "\n",
     "# save to excel file\n",
     "rag_results.to_excel(\"gemini_rag_results.xlsx\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# implement Quadratic Weighted Kappa (QWK) to evaluate the performance of the model\n",
+    "from sklearn.metrics import cohen_kappa_score\n",
+    "\n"
    ]
   },
   {
